[tool.poetry]
name = "leetcode-py"
version = "0.1.0"
description = ""
authors = ["ttboma <ttboma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
ruff = "^0.1.7"
pytest = "^7.4.3"
pytest-custom-exit-code = "^0.3.0"
nox = "^2023.4.22"
furo = "^2023.9.10"
sphinx = "^7.2.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
